--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -58,9 +58,7 @@ jobs:
         with:
           payload: |
             {
-
-              "text": "Build job has finished for environment: ${{ github.event.inputs.ENV }}.",
-           
+              "text": "Build job has finished for environment: ${{ github.event.inputs.ENV }}. Results - Total: ${{ env.total }}, Passed: ${{ env.passed }}, Failures: ${{ env.failures }}, Skipped: ${{ env.skipped }}."
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
