--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -38,12 +38,13 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        working-directory: nexa_api-master  # Specify the directory where pom.xml exists
+        working-directory: nexa_api-master
         run: |
           mvn clean test -DsuiteXmlFile=TestNG.xml -DEnvironment=${{ github.event.inputs.ENV }} -Dgroups=${{ github.event.inputs.GROUPS }} -DSheetName=${{ github.event.inputs.GROUPS }}
       - name: Parse Test Results
         id: test_results
         run: |
+          echo "Parsing results from result.log"
           total=$(awk '/Tests run:/ {print $3}' result.log | tail -1)
           failures=$(awk '/Failures:/ {print $6}' result.log | tail -1)
           errors=$(awk '/Errors:/ {print $8}' result.log | tail -1)
@@ -53,13 +54,17 @@ jobs:
           echo "passed=$passed" >> $GITHUB_ENV
           echo "failures=$failures" >> $GITHUB_ENV
           echo "skipped=$skipped" >> $GITHUB_ENV
+          echo "Total: $total"
+          echo "Passed: $passed"
+          echo "Failures: $failures"
+          echo "Skipped: $skipped"
       - name: Send Slack Notification
         if: always()
         uses: slackapi/slack-github-action@v1.23.0
         with:
           payload: |
             {
-              "text": "Build job has finished for environment: \n\n Environment:${{ github.event.inputs.ENV }} \nResults:\nTotal: ${{ env.total }}\nPassed: ${{ env.passed }}\nFailures:                              ${{ env.failures }}\nSkipped: ${{ env.skipped }}"
+              "text": "Build job has finished for environment: \n\n Environment: ${{ github.event.inputs.ENV }} \nResults:\nTotal: ${{ env.total }}\nPassed: ${{ env.passed }}\nFailures: ${{ env.failures }}\nSkipped: ${{ env.skipped }}"
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
