--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -45,28 +45,37 @@ jobs:
         working-directory: nexa_api-master
         run: |
           ls -R
+      - name: List files in surefire-reports
+        run: |
+          ls -R target/surefire-reports
       - name: Parse Test Results
         id: test_results
         run: |
           # Install xmllint if it's not available
           sudo apt-get install -y libxml2-utils
           
-          # Parse testng-results.xml
-          total=$(xmllint --xpath "count(//testcase)" target/surefire-reports/testng-results.xml)
-          failures=$(xmllint --xpath "count(//testcase[failure])" target/surefire-reports/testng-results.xml)
-          errors=$(xmllint --xpath "count(//testcase[error])" target/surefire-reports/testng-results.xml)
-          skipped=$(xmllint --xpath "count(//testcase[skipped])" target/surefire-reports/testng-results.xml)
-          passed=$((total - failures - errors - skipped))
-          
-          echo "total=$total" >> $GITHUB_ENV
-          echo "passed=$passed" >> $GITHUB_ENV
-          echo "failures=$failures" >> $GITHUB_ENV
-          echo "skipped=$skipped" >> $GITHUB_ENV
-          
-          echo "Total: $total"
-          echo "Passed: $passed"
-          echo "Failures: $failures"
-          echo "Skipped: $skipped"
+          # Check if the file exists and has content
+          if [ -f target/surefire-reports/testng-results.xml ]; then
+            echo "Parsing testng-results.xml"
+            total=$(xmllint --xpath "count(//testcase)" target/surefire-reports/testng-results.xml)
+            failures=$(xmllint --xpath "count(//testcase[failure])" target/surefire-reports/testng-results.xml)
+            errors=$(xmllint --xpath "count(//testcase[error])" target/surefire-reports/testng-results.xml)
+            skipped=$(xmllint --xpath "count(//testcase[skipped])" target/surefire-reports/testng-results.xml)
+            passed=$((total - failures - errors - skipped))
+            
+            echo "total=$total" >> $GITHUB_ENV
+            echo "passed=$passed" >> $GITHUB_ENV
+            echo "failures=$failures" >> $GITHUB_ENV
+            echo "skipped=$skipped" >> $GITHUB_ENV
+            
+            echo "Total: $total"
+            echo "Passed: $passed"
+            echo "Failures: $failures"
+            echo "Skipped: $skipped"
+          else
+            echo "testng-results.xml not found or is empty"
+            exit 1
+          fi
       - name: Send Slack Notification
         if: always()
         uses: slackapi/slack-github-action@v1.23.0
