--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -48,6 +48,9 @@ jobs:
       - name: List files in surefire-reports
         run: |
           ls -R target/surefire-reports
+      - name: Check directory permissions
+        run: |
+          ls -ld target/surefire-reports
       - name: Parse Test Results
         id: test_results
         run: |
