--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -55,7 +55,7 @@ jobs:
           sudo apt-get install -y libxml2-utils
           
           # Check if the file exists and has content
-          if [ -f ./target/surefire-reports/testng-results.xml ]; then
+          if [ -f target/surefire-reports/testng-results.xml ]; then
             echo "Parsing testng-results.xml"
             total=$(xmllint --xpath "count(//testcase)" target/surefire-reports/testng-results.xml)
             failures=$(xmllint --xpath "count(//testcase[failure])" target/surefire-reports/testng-results.xml)
