--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -45,9 +45,12 @@ jobs:
         working-directory: nexa_api-master
         run: |
           ls -R
+      - name: List files in surefire-reports_Testing
+        run: |
+          ls -R nexa_api-master/target/surefire-reports
       - name: List files in surefire-reports
         run: |
-          ls -R target/surefire-reports
+          ls -R target/surefire-reports/testng-results.xml
       - name: Parse Test Results
         id: test_results
         run: |
