--- a/.github/workflows/NexaAPI.yml
+++ b/.github/workflows/NexaAPI.yml
@@ -1,4 +1,5 @@
 name: Nexa API Integration Testing
+
 on:
   push:
     branches:
@@ -32,19 +33,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Build with Maven
         working-directory: nexa_api-master
         run: |
           mvn clean test -DsuiteXmlFile=TestNG.xml -DEnvironment=${{ github.event.inputs.ENV }} -Dgroups=${{ github.event.inputs.GROUPS }} -DSheetName=${{ github.event.inputs.GROUPS }}
+
       - name: List directory after build
         working-directory: nexa_api-master
         run: |
           ls -R
+
       - name: List files in surefire-reports_Testing
         run: |
           ls -R nexa_api-master/target/surefire-reports
@@ -61,9 +66,17 @@ jobs:
           # Check if the file exists and has content
           if [ -f nexa_api-master/target/surefire-reports/testng-results.xml ]; then
             echo "Parsing testng-results.xml"
-            total=$(xmllint --xpath "count(//test-method)" nexa_api-master/target/surefire-reports/testng-results.xml)
-            failures=$(xmllint --xpath "count(//test-method[@status='FAIL'])" nexa_api-master/target/surefire-reports/testng-results.xml)
-            skipped=$(xmllint --xpath "count(//test-method[@status='SKIP'])" nexa_api-master/target/surefire-reports/testng-results.xml)
+            
+            # Count total test-method elements that are not configuration methods
+            total=$(xmllint --xpath "count(//test-method[not(@is-config='true')])" nexa_api-master/target/surefire-reports/testng-results.xml)
+            
+            # Count failed test-method elements
+            failures=$(xmllint --xpath "count(//test-method[not(@is-config='true') and @status='FAIL'])" nexa_api-master/target/surefire-reports/testng-results.xml)
+            
+            # Count skipped test-method elements
+            skipped=$(xmllint --xpath "count(//test-method[not(@is-config='true') and @status='SKIP'])" nexa_api-master/target/surefire-reports/testng-results.xml)
+            
+            # Calculate passed tests
             passed=$((total - failures - skipped))
             
             echo "total=$total" >> $GITHUB_ENV
